<resources>
    <string name="app_name">SamPay NFC</string>
    <string name="good_xxx_xxx">Good xxx, xxx</string>
    <string name="have_a_nice_day">Have a Nice Day</string>
    <string name="good">Good</string>
    <string name="hello">Hello</string>
    <string name="sell">Sell</string>
    <string name="deposit">Deposit</string>
    <string name="buy">Buy</string>
    <string name="withdraw">Withdraw</string>
    <string name="list">List</string>
    <string name="promo">Promo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="transaction">TRANSACTION</string>
    <string name="title_activity_deposit_select">depositSelect</string>
    <string name="title_activity_map_test">Map</string>
</resources>
